# UR_robot_integration_with_vision_and_gripper-using-movit

./: README.md
final_pkg/scripts/: Action_client.py  Try.py
my_moveit_planner/: CMakeLists.txt  package.xml
my_moveit_planner/action/: Pick.action
my_moveit_planner/scripts/: action_client.py  task_server.py
scripts/: Final_client.py
